--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -28,5 +28,6 @@
     </qresource>
     <qresource prefix="/xml">
         <file alias="defaultWorld">xml/defaultWorld.xml</file>
+        <file alias="world.xsd">xml/world.xsd</file>
     </qresource>
 </RCC>
